edit path resources vol2